--- a/trunk/Code/WebInterface/WebInterface.csproj
+++ b/trunk/Code/WebInterface/WebInterface.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{80813922-BFA7-41DC-9DC0-2E86A0AB59F9}</ProjectGuid>
+    <ProjectGuid>{2813D323-8B45-4AF3-8FC8-FBB5F0467748}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SynergySequence</RootNamespace>
-    <AssemblyName>SynergySequence</AssemblyName>
+    <RootNamespace>WebInterface</RootNamespace>
+    <AssemblyName>WebInterface</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -47,30 +48,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Sequence.cs" />
-    <Compile Include="SequenceEditor.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="SequenceEditor.Designer.cs">
-      <DependentUpon>SequenceEditor.cs</DependentUpon>
-    </Compile>
-    <Compile Include="SequenceEditorForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SequenceEditorForm.Designer.cs">
-      <DependentUpon>SequenceEditorForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="SequenceManager.cs" />
-    <Compile Include="CodeBlock.cs" />
+    <Compile Include="CodeBlocks.cs" />
+    <Compile Include="Control.cs" />
+    <Compile Include="Scene.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="URLParser.cs" />
+    <Compile Include="WebInterface.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="SequenceEditor.resx">
-      <DependentUpon>SequenceEditor.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SequenceEditorForm.resx">
-      <DependentUpon>SequenceEditorForm.cs</DependentUpon>
-    </EmbeddedResource>
+    <ProjectReference Include="..\DesktopCodeBlocks\DesktopCodeBlocks.csproj">
+      <Project>{88F52436-24FE-48C4-8E14-2F8E8E8B5476}</Project>
+      <Name>DesktopCodeBlocks</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SynergySequence\SynergySequence.csproj">
+      <Project>{80813922-BFA7-41DC-9DC0-2E86A0AB59F9}</Project>
+      <Name>SynergySequence</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
